Removed Java 11 method